--- a/Whoohoo/Whoohoo/appsettings.json
+++ b/Whoohoo/Whoohoo/appsettings.json
@@ -7,5 +7,5 @@
     }
   },
   "AllowedHosts": "*",
-  "CameraCsvFilePath": "C:\\Users\\jacek\\source\\repos\\Whoohoo\\Whoohoo\\cameras-defb.csv"
+  "CameraCsvFilePath": ".\\cameras-defb.csv"
 }
